--- a/winsocksample/Communication/Communication.vcxproj
+++ b/winsocksample/Communication/Communication.vcxproj
@@ -87,7 +87,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -101,7 +101,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;COMMUNICATION_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -149,13 +149,17 @@
     <ClCompile Include="ClientChannel.cpp" />
     <ClCompile Include="communication.cpp" />
     <ClCompile Include="dllMaincpp.cpp" />
+    <ClCompile Include="SafeQueue.cpp" />
     <ClCompile Include="ServerChannel.cpp" />
+    <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientChannel.h" />
     <ClInclude Include="common_private.h" />
     <ClInclude Include="communication.h" />
+    <ClInclude Include="SafeQueue.h" />
     <ClInclude Include="ServerChannel.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
