--- a/winsocksample/Communication/Communication.vcxproj.filters
+++ b/winsocksample/Communication/Communication.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="util.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="communication_command.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
