--- a/winsocksample/server/winsocksample.vcxproj.filters
+++ b/winsocksample/server/winsocksample.vcxproj.filters
@@ -22,4 +22,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
